--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 * {
@@ -8,3 +9,126 @@
 body{
   font-family: 'Poppins', sans-serif;
 }
+
+nav{
+  display: flex;
+  /* border: 1px solid black; */
+  justify-content: space-around;
+  height: 17vh;
+  align-items: center;
+}
+
+.navbar-logo{
+  font-size: 2rem;
+  cursor: default;
+  /* font-weight: 600; */
+}
+
+.navbar-links{
+  display: flex;
+  gap: 2rem;
+  font-size: 1.5rem;
+}
+
+li{
+  list-style: none;
+}
+
+a{
+  text-decoration: none;
+  color: black;
+}
+
+a:hover{
+  color: gray;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+}
+
+.mobile-navbar{
+  display: none;
+}
+
+
+.menu-icon{
+  width: 1.75rem;
+  height: 1.5rem;
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  position: relative;
+}
+
+.menu-icon span{
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 300ms ease-in-out;
+}
+
+.mobile-menu{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  border: 0.1rem solid gray;
+  border-radius: 0.5rem;
+  padding: 1.5rem;
+  font-size: 1.5rem;
+}
+
+.menu-icon.open span:first-child{
+  transform: translateY(0.7rem) rotate(45deg);
+  transition: all 300ms ease-in-out;
+}
+
+.menu-icon.open span:nth-child(2){
+  opacity: 0;
+}
+
+.menu-icon.open span:nth-child(3){
+  transform: translateY(-0.7rem) rotate(-45deg);
+  transition: all 300ms ease-in-out;
+}
+
+
+.mobile-menu-animator{
+  /* border: 1px solid red; */
+  margin-top: 1.5rem;
+  position: absolute;
+  right: 0;
+  transition: all 500ms ease-in-out;
+  overflow: hidden;
+  height: 0px;
+  padding-top: 10px;
+}
+
+.mobile-menu-animator.open{
+  position: absolute;
+  right: 0;
+  transition: all 500ms ease-in-out;
+  overflow: hidden;
+  height: 250px;
+}
+
+
+
+/* -------------------------------------------------------
+This should be at the end of the file (after applying all elements css) */
+@media screen and (max-width: 1200px) {
+  .desktop-navbar{
+    display: none;
+  }
+  .mobile-navbar{
+    display:flex
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .navbar-logo{
+    font-size: x-large;
+  }
+}
+
