--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
 * {
@@ -6,11 +5,11 @@
   padding: 0;
 }
 
-body{
+body {
   font-family: 'Poppins', sans-serif;
 }
 
-nav{
+nav {
   display: flex;
   /* border: 1px solid black; */
   justify-content: space-around;
@@ -18,39 +17,42 @@ nav{
   align-items: center;
 }
 
-.navbar-logo{
+.navbar-logo {
   font-size: 2rem;
   cursor: default;
   /* font-weight: 600; */
 }
 
-.navbar-links{
+.navbar-links {
   display: flex;
   gap: 2rem;
   font-size: 1.5rem;
 }
 
-li{
+li {
   list-style: none;
 }
 
-a{
+a {
   text-decoration: none;
   color: black;
 }
 
-a:hover{
+a:hover {
   color: gray;
   text-decoration: underline;
   text-underline-offset: 1rem;
 }
 
-.mobile-navbar{
+.mobile-navbar {
   display: none;
 }
 
+.menu-container{
+  position: relative;
+}
 
-.menu-icon{
+.menu-icon {
   width: 1.75rem;
   height: 1.5rem;
   /* border: 1px solid black; */
@@ -58,17 +60,18 @@ a:hover{
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
-  position: relative;
+  /* position: relative; */
+  /* display: inline-block; */
 }
 
-.menu-icon span{
+.menu-icon span {
   width: 100%;
   height: 2px;
   background-color: black;
   transition: all 300ms ease-in-out;
 }
 
-.mobile-menu{
+.mobile-menu {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -77,58 +80,161 @@ a:hover{
   border-radius: 0.5rem;
   padding: 1.5rem;
   font-size: 1.5rem;
+  background-color: white;
+  box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+  margin-top: 0.25rem;
+  margin-right: 0.5rem;
+  margin-bottom: 0.5rem;
+  /* cursor: default; */
 }
 
-.menu-icon.open span:first-child{
+.menu-icon.open span:first-child {
   transform: translateY(0.7rem) rotate(45deg);
   transition: all 300ms ease-in-out;
 }
 
-.menu-icon.open span:nth-child(2){
+.menu-icon.open span:nth-child(2) {
   opacity: 0;
 }
 
-.menu-icon.open span:nth-child(3){
+.menu-icon.open span:nth-child(3) {
   transform: translateY(-0.7rem) rotate(-45deg);
   transition: all 300ms ease-in-out;
 }
 
-
-.mobile-menu-animator{
+.mobile-menu-animator {
   /* border: 1px solid red; */
-  margin-top: 1.5rem;
+  /* margin-top: 0.5rem; */
   position: absolute;
   right: 0;
-  transition: all 500ms ease-in-out;
+  transition: all 300ms ease-in-out;
   overflow: hidden;
   height: 0px;
-  padding-top: 10px;
+  /* cursor: default; */
 }
 
-.mobile-menu-animator.open{
+.mobile-menu-animator.open {
   position: absolute;
   right: 0;
-  transition: all 500ms ease-in-out;
+  transition: all 300ms ease-in-out;
   overflow: hidden;
-  height: 250px;
+  height: 260px;
 }
 
+/* PROFILE */
+.profile-div {
+  height: 83vh;
+  /* height: fit-content; */
+  display: flex;
+  gap: 5rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile-image-container {
+  width: 25rem;
+  height: 25rem;
+  /* border: 0.2rem solid black; */
+}
+
+.profile-context-container {
+  width: 25rem;
+  /* height: 25rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* border: 0.2rem solid black; */
+}
+
+.profile-image {
+  width: 100%;
+}
+
+.small-text {
+  color: rgb(90, 90, 90);
+}
+
+.medium-text {
+  font-size: 1.75rem;
+  color: rgb(90, 90, 90);
+}
+
+.big-text {
+  font-size: 3rem;
+  font-weight: bold;
+  /* text-wrap: wrap; */
+}
+
+.profile-txt-btns-container {
+  display: flex;
+  gap: 1rem;
+}
+
+.text-button {
+  border: 0.1rem solid rgb(90, 90, 90);
+  padding: 0.75rem 1rem;
+  border-radius: 3rem;
+  min-width: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  font-weight: bold;
+  transition: all 300ms ease;
+  margin-top: 1rem;
+  background-color: rgb(230, 230, 230);
+}
+
+a.text-button{
+  text-decoration: none;
+}
+
+.text-button:hover {
+  color: white;
+  background-color: black;
+}
+
+.profile-links-btns-container {
+  /* border: 1px solid black; */
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.profile-link-btn {
+  width: 2rem;
+}
 
 
 /* -------------------------------------------------------
 This should be at the end of the file (after applying all elements css) */
 @media screen and (max-width: 1200px) {
-  .desktop-navbar{
+  .desktop-navbar {
     display: none;
   }
-  .mobile-navbar{
-    display:flex
+
+  .mobile-navbar {
+    display: flex
+  }
+
+  .profile-div {
+    flex-direction: column;
+    /* height: fit-content; */
+    gap: 2rem;
+  }
+
+  .profile-image-container {
+    width: 18rem;
+    height: 18rem;
+  }
+  .profile-context-container{
+    margin-bottom: 4rem;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .navbar-logo{
+  .navbar-logo {
     font-size: x-large;
   }
 }
-
