--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@
 
 body {
   font-family: 'Poppins', sans-serif;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 nav {
@@ -48,7 +52,7 @@ a:hover {
   display: none;
 }
 
-.menu-container{
+.menu-container {
   position: relative;
 }
 
@@ -81,7 +85,7 @@ a:hover {
   padding: 1.5rem;
   font-size: 1.5rem;
   background-color: white;
-  box-shadow: 3px 3px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
   margin-top: 0.25rem;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
@@ -129,9 +133,10 @@ a:hover {
   gap: 5rem;
   justify-content: center;
   align-items: center;
+  border: 1px solid black;
 }
 
-.profile-image-container {
+.image-container {
   width: 25rem;
   height: 25rem;
   /* border: 0.2rem solid black; */
@@ -147,10 +152,6 @@ a:hover {
   /* border: 0.2rem solid black; */
 }
 
-.profile-image {
-  width: 100%;
-}
-
 .small-text {
   color: rgb(90, 90, 90);
 }
@@ -160,7 +161,7 @@ a:hover {
   color: rgb(90, 90, 90);
 }
 
-.big-text {
+.large-text {
   font-size: 3rem;
   font-weight: bold;
   /* text-wrap: wrap; */
@@ -186,7 +187,7 @@ a:hover {
   background-color: rgb(230, 230, 230);
 }
 
-a.text-button{
+a.text-button {
   text-decoration: none;
 }
 
@@ -204,6 +205,91 @@ a.text-button{
 
 .profile-link-btn {
   width: 2rem;
+}
+
+/* ABOUT SECTION */
+
+
+.about-container {
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: auto 10rem;
+
+}
+
+.about-blocks-container {
+  display: flex;
+  gap: 2rem;
+  width: 100%;
+}
+
+.about-block {
+  /* width: 20rem; */
+  /* height: 10rem; */
+  padding: 1.5rem;
+  border: 0.1rem solid rgb(163, 163, 163);
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 100%;
+}
+
+.about-photo-and-details-container {
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5rem;
+
+  width: 100%;
+}
+
+.about-paragraph {
+  text-wrap: wrap;
+  flex-wrap: wrap;
+  color: rgb(68, 68, 68);
+}
+
+.blocks-and-paragraph-container {
+  /* border: 1px solid grey; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  /* background-color: aqua; */
+  width: 100%;
+}
+
+section {
+  height: 100vh;
+  /* padding-top: 4vh; */
+  /* height: 96vh; */
+  /* box-sizing: border-box; */
+  /* min-height: fit-content; */
+  position: relative;
+  /* background-color: darkkhaki; */
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+}
+
+.small-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.arrow-icon{
+  width: 2rem;
+  height: 2rem;
+  position: absolute;
+  right: 5rem;
+  bottom: 5rem;
+  cursor: pointer;
 }
 
 
@@ -224,12 +310,25 @@ This should be at the end of the file (after applying all elements css) */
     gap: 2rem;
   }
 
-  .profile-image-container {
+  .image-container {
     width: 18rem;
     height: 18rem;
   }
-  .profile-context-container{
+
+  .profile-context-container {
     margin-bottom: 4rem;
+  }
+
+  .about-container {
+    margin: 0 5%;
+  }
+
+  .about-photo-and-details-container {
+    flex-direction: column;
+  }
+
+  .arrow-icon{
+    display: none;
   }
 }
 
