--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,7 @@ section {
   position: absolute;
   right: 5rem;
   bottom: 5rem;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 /* EXPERIENCE SECTION */
