--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
 
@@ -127,12 +131,13 @@ a:hover {
 
 /* PROFILE */
 .profile-div {
-  height: 83vh;
+  /* height: 83vh; */
   display: flex;
   gap: 5rem;
   justify-content: center;
   align-items: center;
   border: 1px solid black;
+  min-height: 83vh;
 }
 
 .image-container {
@@ -172,7 +177,7 @@ a:hover {
 }
 
 .text-button {
-  border: 0.1rem solid rgb(90, 90, 90);
+  border: 0.1rem solid rgb(170, 170, 170);
   padding: 0.75rem 1rem;
   border-radius: 3rem;
   min-width: 6rem;
@@ -183,7 +188,7 @@ a:hover {
   font-weight: bold;
   transition: all 300ms ease;
   margin-top: 1rem;
-  background-color: rgb(230, 230, 230);
+  background-color: rgb(240, 240, 240);
 }
 
 a.text-button {
@@ -265,15 +270,16 @@ a.text-button {
 }
 
 section {
-  height: 100vh;
-  /* padding-top: 4vh; */
-  /* height: 96vh; */
+  /* height: 100vh; */
   /* box-sizing: border-box; */
   position: relative;
   /* background-color: darkkhaki; */
   border: 1px solid black;
   display: flex;
   justify-content: center;
+  /* height: fit-content; */
+  /* min-height: fit-content; */
+  min-height: 100vh;
 }
 
 .small-icon {
@@ -305,13 +311,14 @@ section {
   display: flex;
   gap: 2rem;
   margin-top: 2rem;
+  /* flex-wrap: wrap; */
 }
 
 .skills-wrap {
   margin-top: 2rem;
   display: flex;
   justify-content: center;
-  gap: 2rem;
+  gap: 2rem 1.5rem;
   flex-wrap: wrap;
 }
 
@@ -320,6 +327,7 @@ section {
   min-width: 11rem;
   display: flex;
   gap: 1rem;
+  /* flex: 1; */
 }
 
 .exp-title {
@@ -333,11 +341,57 @@ section {
   color: rgb(65, 65, 65);
 }
 
-.exp-header{
+.exp-header {
   text-align: center;
   font-size: 1.75rem;
   font-weight: bold;
   color: rgb(75, 75, 75);
+}
+
+/* PROJECTS SECTION */
+.projects-container {
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 3rem 10rem;
+  /* margin-top: 3rem; */
+}
+
+.projects-wrap {
+  display: flex;
+  gap: 2rem;
+  margin-top: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.project-container {
+  padding: 1.5rem;
+  border: 0.1rem solid rgb(163, 163, 163);
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* width: 100%; */
+  /* width: auto; */
+  flex: 2;
+}
+
+.project-img {
+  /* width: 20rem; */
+  width: 95%;
+  border-radius: 2rem;
+}
+
+.project-name {
+  font-size: 2rem;
+  margin: 1rem;
+}
+
+.project-btns {
+  display: flex;
+  gap: 1rem;
 }
 
 
@@ -363,14 +417,12 @@ This should be at the end of the file (after applying all elements css) */
   }
 
   .profile-div {
-    height: fit-content;
+    /* height: fit-content; */
   }
 
   .profile-context-container {
     margin-bottom: 3rem;
   }
-
-
 
   .about-container {
     margin: 3rem 5%;
@@ -389,13 +441,26 @@ This should be at the end of the file (after applying all elements css) */
     margin: 3rem 5%;
   }
 
-  section {
+  /* section {
     height: fit-content;
+  } */
+
+  .projects-container {
+    margin: 3rem 5%;
   }
+}
+
+@media screen and (max-width: 1000px) {
+  /* .exp-group-container {
+    flex-wrap: wrap;
+  } */
 }
 
 @media screen and (max-width: 600px) {
   .navbar-logo {
     font-size: x-large;
+  }
+  .exp-group-container {
+    flex-wrap: wrap;
   }
 }
