--- a/src/index.css
+++ b/src/index.css
@@ -17,12 +17,18 @@ body {
   justify-content: center;
 }
 
+a,
+.btn {
+  transition: all 300ms ease;
+}
+
 nav {
   display: flex;
   /* border: 1px solid black; */
   justify-content: space-around;
   height: 17vh;
   align-items: center;
+  /* background-color: rgb(240, 240, 240); */
 }
 
 .navbar-logo {
@@ -35,6 +41,8 @@ nav {
   display: flex;
   gap: 2rem;
   font-size: 1.5rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 li {
@@ -136,7 +144,7 @@ a:hover {
   gap: 5rem;
   justify-content: center;
   align-items: center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   min-height: 83vh;
 }
 
@@ -158,11 +166,12 @@ a:hover {
 
 .small-text {
   color: rgb(90, 90, 90);
+  font-weight: bold;
 }
 
 .medium-text {
   font-size: 1.75rem;
-  color: rgb(75, 75, 75);
+  color: rgb(90, 90, 90);
 }
 
 .large-text {
@@ -234,7 +243,7 @@ a.text-button {
   /* width: 20rem; */
   /* height: 10rem; */
   padding: 1.5rem;
-  border: 0.1rem solid rgb(163, 163, 163);
+  border: 0.1rem solid rgb(170, 170, 170);
   border-radius: 2rem;
   display: flex;
   flex-direction: column;
@@ -249,7 +258,7 @@ a.text-button {
   gap: 3rem;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: 2rem;
 
   width: 100%;
 }
@@ -257,7 +266,7 @@ a.text-button {
 .about-paragraph {
   text-wrap: wrap;
   flex-wrap: wrap;
-  color: rgb(68, 68, 68);
+  color: rgb(90, 90, 90);
 }
 
 .blocks-and-paragraph-container {
@@ -275,7 +284,7 @@ section {
   /* box-sizing: border-box; */
   position: relative;
   /* background-color: darkkhaki; */
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
   justify-content: center;
   /* height: fit-content; */
@@ -339,14 +348,14 @@ section {
 .exp-level {
   /* font-weight: bold; */
   /* font-size: 1.25rem; */
-  color: rgb(65, 65, 65);
+  color: rgb(90, 90, 90)
 }
 
 .exp-header {
   text-align: center;
   font-size: 1.75rem;
   font-weight: bold;
-  color: rgb(75, 75, 75);
+  color: rgb(90, 90, 90);
 }
 
 /* PROJECTS SECTION */
@@ -369,7 +378,7 @@ section {
 
 .project-container {
   padding: 1.5rem;
-  border: 0.1rem solid rgb(163, 163, 163);
+  border: 0.1rem solid rgb(170, 170, 170);
   border-radius: 2rem;
   display: flex;
   flex-direction: column;
@@ -396,13 +405,28 @@ section {
 }
 
 /* CONTACT SECTION */
-.contact-container{
+.contact-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   /* border: 0.1rem solid black; */
   margin: 3rem 10rem;
   /* margin: auto 10rem; */
+}
+
+/* FOOTER SECTION */
+.footer-container {
+  display: flex;
+  justify-content: center;
+  background-color: rgb(240, 240, 240)
+}
+
+.copy-writes {
+  /* border: 0.1rem solid black; */
+  display: flex;
+  justify-content: center;
+  margin-top: 5rem;
+  color: rgb(90, 90, 90);
 }
 
 
@@ -456,13 +480,38 @@ This should be at the end of the file (after applying all elements css) */
   .projects-container {
     margin: 3rem 5%;
   }
+
+  .contact-container {
+    margin: 3rem 5%;
+  }
+  
 }
 
 @media screen and (max-width: 600px) {
   .navbar-logo {
     font-size: x-large;
   }
+
   .exp-group-container {
     flex-wrap: wrap;
   }
+
+  .navbar-links {
+    font-size: 1rem;
+    gap: 1rem;
+  }
+
+  .large-text{
+    font-size: 2rem;
+  }
+  .medium-text{
+    font-size: 1.5rem;
+  }
+
+  .image-container {
+    width: 15rem;
+    height: 15rem;
+  }
+
+
 }
